--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -6,8 +6,7 @@
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:showIn="@layout/activity_main"
-    tools:context=".activities.MainActivity">
+    tools:showIn="@layout/activity_main">
   <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
 <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
                                               android:layout_height="match_parent"></android.support.v4.widget.SwipeRefreshLayout>
